# Polymetrics

./: .gitignore  README.md
backend/: .env  pyproject.toml  raw_gamma.json  raw_response.json  requirements.txt
backend/app/: __init__.py  clob_client.py  config.py  gamma_client.py  main.py  models.py  polymarket_client.py  polymarket_graphql.py  test_clob.py  test_endpoints.py  test_gamma_client.py  test_graphql_client.py  test_queries.py  test_satsuma.py  test_websocket.py
backend/scripts/: analyze_gamma.py
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MarketCard.tsx  MarketChart.tsx
frontend/src/lib/: api.ts
frontend/src/types/: market.ts
