[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
py-clob-client = "^0.18.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
aiohttp = {extras = ["speedups"], version = "^3.11.11"}
gql = {extras = ["aiohttp"], version = "^3.5.0"}
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
